Fix next/prev optical spacing

--- a/css/main.styl
+++ b/css/main.styl
@@ -217,7 +217,7 @@ aside.author
   .post-nav
     width: 100%
     overflow: hidden
-    padding: 5% 0 10% 0
+    padding: 10% 0 6% 0
   .post-prev
     float left
     padding 0
